objects/PC_SelfServiceSetting__mdt.object
<CustomObject>
    <description>Settings to configure self services provided per engagement program</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked if the service configured needs to be listed to caller</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Channel__c</fullName>
        <description>self service channel</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTI</fullName>
                    <default>true</default>
                    <label>CTI</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_DownstreamFlowIdentifier__c</fullName>
        <description>Unique identifier for the flow that need to be executed after Service flow is run</description>
        <label>Downstream Flow Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_EngagementProgram__c</fullName>
        <description>The Engagement program to which the Service is associated to</description>
        <label>Engagement Program</label>
        <referenceTo>PC_EngagementProgram__mdt</referenceTo>
        <relationshipName>PC_SelfServiceSettings_EngagementProgram</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PC_Order__c</fullName>
        <description>Order in which services need to be read out to caller</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_OtherChannel__c</fullName>
        <description>Specify Other channel name if &quot;Other&quot; is selected in Channel</description>
        <label>Other Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ServiceFlowIdentifier__c</fullName>
        <description>Unique identifier for the service flow</description>
        <label>Service Flow Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ServiceName__c</fullName>
        <description>Name of the service that is offered
Ex: Cancel Appointment</description>
        <label>Service Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_VendorName__c</fullName>
        <description>Name of the vendor for which services configuration is done.
Ex: Amazon Connect</description>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Self Service Setting</label>
    <pluralLabel>Self Service Settings</pluralLabel>
</CustomObject>